Make project work with Spring 3.2.x on Java 17